sass/main.scss
/* ... */
// COPYRIGHT TEXT
.copyright-text {
	font-size: 17px;
	font-weight: bold;
	display: block;
	text-transform: uppercase;
}


// COLOR MODE
.color-mode {
	font-weight: $font-weight-bold;
	cursor: pointer;
}

.color-mode-icon {
	position: relative;
	right: 6px;
  &:after {
  	font-family: 'unicons';
  	content: '\ea9f';
  	font-size: 30px;
  	font-weight: 300;
  	font-style: normal;
  }
  &.active {
  	&:after {
  		font-family: 'unicons';
  		content: '\eb65';
  		font-size: 30px;
  		color: $text-white;
  	}
  }
}

.dark-mode {
	background: $dark-mode-color;
	.navbar-light .navbar-nav .nav-link {
		color: rgb(255, 255, 255);
		&:hover {
			color: $main-color;
		}
	}
	.navbar {
		&[class*="headroom--not-top"] {
			background: $dark-mode-color;
			border-bottom: 1px solid #1f1f1f;
	    }
	}
	.small-text {
		background: #0d0c15;
		color: $text-white;
	}
	.feature-card .uil, .button-text,
	.navbar-light .navbar-brand,
	h1, h2, h3, h4, h5, h6, p, .close,
	.color-mode, .navbar-toggler .navbar-toggler-icon, .txtAboutMe{
		color: $text-white !important;
	}
	.owl-carousel {
		.owl-nav button.owl-next,
		.owl-nav button.owl-prev,
		button.owl-dot {
			color: $text-white;
		}
	}
	small{
		color: $text-white !important;
	}

	.subtitle {
		color: #4c979b !important;
	}

	.modal-content{
		background: $modal-background;
	}

	.navbar-toggler .navbar-toggler-icon, .bg-dark-mode-svg, hr{
		background: $text-white !important;
	}

	.btn-close{
		background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat
	}

	.copyright-text{
		color: $text-white;
		text-shadow: 2px 3px #ffffff38;
	}

	.dropdown-menu{
		background: $modal-background;
		color: $text-white;
		.dropdown-item{
			color: $text-white;
		}
		.dropdown-item img{
			background: $text-white;
			border-radius: 25%;
		}
		.bg-git{
			border-radius: 50% !important;
		}
	}

	.habilities{
		color: $text-white;
	}
}

.svg-social img{
	width: 15px;
	height: 15px;
}

.svg-social li{
	display: flex;
	align-items: center;
}

.dropdown-item.active, .dropdown-item:active{
	color: transparent;
	background-color: transparent;
}


// TIMELINE
.timeline-wrapper {
	position: relative;
	padding-bottom: 10px;
	&:last-child {
		&:before {
			height: 0;
		}
	}
	&:before {
		content: "";
    	background: $button-color;
    	width: 3px;
    	height: 100%;
    	position: absolute;
    	left: 42px; 
	}
}

.bg-dark-mode-svg-rounded{
	background: $text-white;
	border-radius: 50%;
}

.timeline-yr {
	background: $button-color;
	border-radius: 100%;
	position: absolute;
	width: 85px;
	height: 85px;
	line-height: 85px;
	text-align: center;
	display: flex;
    align-items: center;
    justify-content: center;
	span {
		color: $text-white;
    	font-size: 15px;
    	font-weight: $font-weight-bold;
    	display: block;
    	line-height: 75px;
	}
}

.timeline-info {
	display: inline-block;
	vertical-align: top;
	max-width: 432px;
	margin-left: 6em;
	small {
		color: $button-color;
    	font-size: $link-font-size;
    	font-weight: $font-weight-bold;
    	display: inline-block;
    	vertical-align: middle;
    	margin-left: 15px;
	}
}


// OWL CAROUSEL
.owl-carousel {
	.owl-nav {
		span {
			display: none;
		}
		.owl-prev,
		.owl-next {
			&:before {
				background: none;
				padding: 0;
				display: block;
				position: absolute;
				top: 50%;
				transform: translate(0, -50%); 
				font-family: 'unicons';
				font-size: 100px;
				line-height: normal;
			}
		}
		.owl-prev {
			&:before {
				content: '\e833';
  				left: -45px; 
			}
		}
		.owl-next {
			&:before {
				content: '\e836';
  				right: -45px; 
			}
		}
	}
}

.owl-theme {
	.owl-nav [class*=owl-] {
		background: none;
  		border-radius: 0;
  		margin: 0;
  		padding: 0;
  		font-size: inherit; 
  		&:hover {
  			color: $main-color;
  		}
	}
  	.owl-dots {
  		.owl-dot {
  			outline: none;
  			span {
  				width: 8px;
  				height: 8px;
  			}
  			&.active,
  			&:hover {
  				span {
  					background: $body-font-color;
  				}
  			}
  		}
  	}
}


// GOOGLE MAP
.google-map {
	iframe {
		width: 100%;
	}
}


// CONTACT FORM
.contact-form {
	position: relative;
	.form-control {
		background: transparent;
		border-radius: 2px;
		outline: none;
		box-shadow: none;
		font-weight: $font-weight-bold;
		margin: 16px 0;
		&:not(textarea) {
			height: 48px;
		}
		&:hover,
		&:focus {
			border-color: $main-color;
		}
	}
	.submit-btn {
		background: $main-color;
		border-radius: 50px;
		color: $text-white;
		font-weight: $font-weight-bold;
		border: 0;
		cursor: pointer;
		@include transition-effect;
		&:hover {
			background: $button-color;
		}
	}
}

.navbar-light .navbar-toggler {
	color: transparent !important;
    border-color: transparent !important;
}

.contact-info {
	background: $button-color;
	border-radius: 0 0 3px 3px;
	position: relative;
	bottom: 8px;
	p, a {
		color: #f7f3f3;
	}
}

.switchMode{
	position: absolute;
    right: 50px;
}


// SOCIAL LINKS
.social-links {
	.uil {
		color: #f7f3f3;
		font-size: 20px;
		display: block;
		margin: 5px 0;
		&:hover {
			color: $main-color;
		}
	}
}


// RESPONSIVE STYLES
@media (min-width: 1270px) {
	.owl-theme {
		.owl-dots {
			position: relative;
			bottom: 50px;
		}
	}
	.txtMode{
		display: block;
	}
}

@media (max-width:1300px) {
	.name{
		font-size: 2em !important;
	}
	.subtitle {
		font-size: 1.8em !important;
	}
}

@media (max-width:1250px) {
	.habilities {
		grid-template-columns: repeat(3,minmax(0,1fr));
		&.hab-hobbies{
			grid-template-columns: repeat(2,minmax(0,1fr));
		}
	}
}
/* ... */

